# glowing-umbrella

./: .gitignore  Dockerfile  Dockerfile.subgraph  README.md  docker-compose.yaml  index.js  install.sh  package.json
custom-router/: .dockerignore   Cargo.toml  Dockerfile  router.yaml
custom-router/src/plugins/: mod.rs  node_bridge.rs
custom-router/xtask/: Cargo.toml
example/subgraphs/one/: index.js  package.json  schema.graphql
example/subgraphs/two/: index.js  package.json  schema.graphql
scripts/: build_and_install_router.sh  publish.sh
