# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "router"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xtask",
]

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
# Note if you update these dependencies then also update xtask/Cargo.toml
apollo-router = "1.2.1"
async-trait = "0.1.52"
futures = "0.3.21"
http = "0.2.8"
reqwest = "0.11.12"
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "=0.1.34"

# this makes build scripts and proc macros faster to compile
[profile.dev.build-override]
strip = "debuginfo"
incremental = false
